Correct width issue on smaller screens. Adjust footer spacing.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,7 +39,7 @@ body {
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 120px;
+  width: 400px;
   background-color: black;
   color: #fff;
   text-align: center;
